# libreria-comun

./: README.md  setup.cfg
src/ingcom/: generador.py  medir.py  memorizador.py
