[metadata]
name = ingcom-common-pkg-MRTIN
version = 0.0.1
author = Martín René Vilugron - UNRN Andina
author_email = mrvilugron@unrn.edu.ar
description = Un paquete con funciones de ayuda simples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/INGCOM-UNRN/libreria-comun.git
project_urls =
    Wiki =  https://github.com/INGCOM-UNRN/libreria-comun/wiki
    Bug Tracker = https://github.com/INGCOM-UNRN/libreria-comun/issues
classifiers =
    Development Status ::1 - Planning
    Environment :: Console
    Programming Language :: Python :: 3.7    
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: Spanish

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
